Updates on the cauldron notebook. Unit tests pass.

--- a/notebooks/data_wrangling/datawrangling.ipynb
+++ b/notebooks/data_wrangling/datawrangling.ipynb
@@ -8,10 +8,9 @@
     "For reasons that are detailed in the root README.md, I'm using Cauldron notebooks in this project to display meaningful results - any Jupyter notebooks are just exploratory chicken scratches.\n",
     "\n",
     "If you want to see meaningful outputs, you have three easy options:\n",
-    "- For just the visuals without code:\n",
-    " - Option 1: check this directory for a pdf that I've printed from the Cauldron notebook\n",
-    " - Option 2: check within this directory for a folder called 'html' - within that directory will be an html file where you can see all the visuals\n",
-    "- If you want to see the visuals and the code: go to http://unnotebook.com/reader-install/ and install the reader, and point it to this directory."
+    "- Option 1: check within this directory for a folder called 'html' - within that directory will be an html file where you can see all the visuals.\n",
+    "- Option 2: go to http://unnotebook.com/reader-install/ and install the reader, and point it to the data_wrangling.cauldron file in this directory. The install is actually fast and easy, and the visuals look the best in this format.\n",
+    "- Option 3: check this directory for a pdf that I've printed from the Cauldron notebook. This is just visuals without code, and the visuals aren't as good as the other two options.\n"
    ]
   },
   {
