Made update to tests/test_make_dataset_with_constraints.py and corresponding changes to src/data/make_dataset.py and additional files. Unit tests pass.

--- a/notebooks/data_wrangling/chicken_scratches-datawrangling.ipynb
+++ b/notebooks/data_wrangling/chicken_scratches-datawrangling.ipynb
@@ -195,7 +195,9 @@
     "df['day_of_week'] = df.date.dt.dayofweek\n",
     "df.loc[df.customers == 0, 'open'] = 0\n",
     "df['date'] = pd.to_datetime(df['date'])\n",
-    "df['week_start'] = pd.to_datetime(df['week_start'])"
+    "df['week_start'] = pd.to_datetime(df['week_start'])\n",
+    "df.loc[df.open == 0, 'promo'] = 0\n",
+    "df.loc[df.open == 0, 'promo2'] = 0"
    ]
   },
   {
