Changed make_dataset so promo2 is not automatically 0 if the store is closed since promo2 is an ongoing promotion. Unit tests pass.

--- a/notebooks/data_wrangling/chicken_scratches-datawrangling.ipynb
+++ b/notebooks/data_wrangling/chicken_scratches-datawrangling.ipynb
@@ -197,7 +197,9 @@
     "df['date'] = pd.to_datetime(df['date'])\n",
     "df['week_start'] = pd.to_datetime(df['week_start'])\n",
     "df.loc[df.open == 0, 'promo'] = 0\n",
-    "df.loc[df.open == 0, 'promo2'] = 0"
+    "# Note that because promo2 is an ongoing promotion, whether a store is open has no bearing on what its promo2 \n",
+    "# status should be\n",
+    "# df.loc[df.open == 0, 'promo2'] = 0"
    ]
   },
   {
