Updating notebooks, especially notebooks/EDA/EDA.ipynb.

--- a/notebooks/data_wrangling/chicken_scratches-datawrangling.ipynb
+++ b/notebooks/data_wrangling/chicken_scratches-datawrangling.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NOTE ON JUPYTER NOTEBOOKS\n",
+    "# WARNING - STOP AND READ THIS FIRST\n",
     "For reasons that are detailed in the root README.md, I'm using Cauldron notebooks in this project to display meaningful results - any Jupyter notebooks are just exploratory chicken scratches.\n",
     "\n",
     "If you want to see meaningful outputs, you have three easy options:\n",
