Updates to notebooks in notebooks/EDA/ for cauldron. No additional unit tests yet.

--- a/notebooks/EDA/EDA.ipynb
+++ b/notebooks/EDA/EDA.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -5720,66 +5720,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "sales                           1.000000\n",
        "customers                       0.900855\n",
        "open                            0.704430\n",
        "promo                           0.503123\n",
-       "promo2                          0.201789\n",
+       "day_of_week                    -0.439142\n",
        "trend                           0.132667\n",
+       "promo2                         -0.119537\n",
        "school_holiday                  0.103216\n",
-       "assortment                      0.094887\n",
        "max_visibility_km               0.082983\n",
        "mean_wind_speed_km_h            0.061571\n",
        "max_wind_speed_km_h             0.051738\n",
        "mean_visibility_km              0.050962\n",
-       "store_type                      0.042900\n",
+       "min_humidity                   -0.049081\n",
+       "max_humidity                   -0.047872\n",
+       "mean_humidity                  -0.047422\n",
        "min_visibility_km               0.042883\n",
-       "state_holiday                   0.032229\n",
        "max_gust_speed_km_h             0.030297\n",
+       "competition_open_since_month   -0.023017\n",
+       "min_sea_level_pressureh_pa     -0.022368\n",
+       "mean_dew_point_c               -0.020435\n",
+       "promo2_since_year              -0.018766\n",
+       "min_dew_point_c                -0.017721\n",
+       "dew_point_c                    -0.017577\n",
+       "mean_sea_level_pressureh_pa    -0.014560\n",
        "promo2_since_week               0.014353\n",
        "competition_open_since_year     0.013752\n",
-       "date                            0.011703\n",
-       "week_start                      0.009891\n",
-       "store                           0.006779\n",
-       "max_sea_level_pressureh_pa     -0.000850\n",
-       "mean_temperature_c             -0.000982\n",
-       "min_temperature_c              -0.001029\n",
-       "wind_dir_degrees               -0.001720\n",
-       "max_temperature_c              -0.002195\n",
-       "precipitationmm                -0.006101\n",
-       "cloud_cover                    -0.010658\n",
        "competition_distance           -0.013715\n",
-       "mean_sea_level_pressureh_pa    -0.014560\n",
-       "dew_point_c                    -0.017577\n",
-       "min_dew_point_c                -0.017721\n",
-       "promo2_since_year              -0.018766\n",
-       "mean_dew_point_c               -0.020435\n",
-       "events                         -0.020860\n",
-       "min_sea_level_pressureh_pa     -0.022368\n",
-       "competition_open_since_month   -0.023017\n",
-       "mean_humidity                  -0.047422\n",
-       "max_humidity                   -0.047872\n",
-       "min_humidity                   -0.049081\n",
-       "state                          -0.091017\n",
-       "promo_interval                 -0.106311\n",
-       "day_of_week                    -0.439142\n",
+       "cloud_cover                    -0.010658\n",
+       "store                           0.006779\n",
+       "precipitationmm                -0.006101\n",
+       "max_temperature_c              -0.002195\n",
+       "wind_dir_degrees               -0.001720\n",
+       "min_temperature_c              -0.001029\n",
+       "mean_temperature_c             -0.000982\n",
+       "max_sea_level_pressureh_pa     -0.000850\n",
        "Name: sales, dtype: float64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "for_heatmap = df.copy()\n",
     "corrs = for_heatmap.corr()\n",
-    "corrs['sales'].sort_values(ascending=False)"
+    "#corrs['sales'].sort_values(ascending=False)\n",
+    "#abs(for_heatmap.corr()['sales']).sort_values(ascending=False)\n",
+    "#calc = pd.DataFrame(DescrStatsW(temp, temp.WGTP).corrcoef, index=temp.columns, columns=temp.columns).NYCgov_Income\n",
+    "calc = corrs['sales']\n",
+    "calc.reindex(calc.abs().sort_values(ascending=False).index).tail(-1)\n",
+    "#calc[calc.index.duplicated()]"
    ]
   },
   {
@@ -6316,6 +6313,26 @@
     "promo2_since_week               0.014353\n",
     "competition_open_since_year     0.013752\n",
     "date                            0.011703"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2015-07-31 00:00:00')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.date.max()"
    ]
   }
  ],
