About to refactor notebooks/EDA/S03-correlations.py

--- a/notebooks/EDA/EDA.ipynb
+++ b/notebooks/EDA/EDA.ipynb
@@ -9044,6 +9044,85 @@
     "di.set_index('date', inplace=True)\n",
     "di.sales.resample('M').sum().plot()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "store                           0.006779\n",
+       "state                           0.007250\n",
+       "max_temperature_c              -0.002195\n",
+       "mean_temperature_c             -0.000982\n",
+       "min_temperature_c              -0.001029\n",
+       "dew_point_c                    -0.017577\n",
+       "mean_dew_point_c               -0.020435\n",
+       "min_dew_point_c                -0.017721\n",
+       "max_humidity                   -0.047872\n",
+       "mean_humidity                  -0.047422\n",
+       "min_humidity                   -0.049081\n",
+       "max_sea_level_pressureh_pa     -0.000850\n",
+       "mean_sea_level_pressureh_pa    -0.014560\n",
+       "min_sea_level_pressureh_pa     -0.022368\n",
+       "max_visibility_km               0.082983\n",
+       "mean_visibility_km              0.050962\n",
+       "min_visibility_km               0.042883\n",
+       "max_wind_speed_km_h             0.051738\n",
+       "mean_wind_speed_km_h            0.061571\n",
+       "max_gust_speed_km_h             0.030297\n",
+       "precipitationmm                -0.006101\n",
+       "cloud_cover                    -0.010658\n",
+       "wind_dir_degrees               -0.001720\n",
+       "store_type                     -0.022359\n",
+       "assortment                      0.081189\n",
+       "competition_distance           -0.013715\n",
+       "competition_open_since_month   -0.023017\n",
+       "competition_open_since_year     0.013752\n",
+       "promo2                         -0.119537\n",
+       "promo2_since_week               0.014353\n",
+       "promo2_since_year              -0.018766\n",
+       "promo_interval                 -0.103291\n",
+       "day_of_week                    -0.439142\n",
+       "sales                           1.000000\n",
+       "customers                       0.900855\n",
+       "open                            0.704430\n",
+       "promo                           0.503123\n",
+       "state_holiday                  -0.213953\n",
+       "school_holiday                  0.103216\n",
+       "trend                           0.132667\n",
+       "week_start                      0.009891\n",
+       "Name: sales, dtype: float64"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "no_cats = df.copy()\n",
+    "#no_cats.dtypes[no_cats.dtypes == 'object']\n",
+    "# state, events, store_type, assortment, promo_interval, state_holiday, week_start\n",
+    "no_cats.replace({'assortment': {'a': 0, 'b': 1, 'c': 2}, 'store_type': {'a': 0, 'b': 1, 'c': 2, 'd': 3}, \n",
+    "    'promo_interval': {'None': 0, 'Jan,Apr,Jul,Oct': 1, 'Feb,May,Aug,Nov': 2, 'Mar,Jun,Sept,Dec': 3}, \n",
+    "    'state_holiday': {'0': 0, 'a': 1, 'b': 2, 'c': 3}, 'state': {'BE': 0, 'BW': 1, 'BY': 2, 'HB,NI': 3,\n",
+    "    'HE': 4, 'HH': 5, 'NW': 6, 'RP': 7, 'SH': 8, 'SN': 9, 'ST': 10, 'TH': 11}}, inplace=True)\n",
+    "no_cats['week_start'] = pd.to_datetime(no_cats.week_start)\n",
+    "no_cats['week_start'] = no_cats['week_start'] - pd.to_datetime('2012-12-30')\n",
+    "no_cats['week_start'] = no_cats['week_start'].dt.days\n",
+    "no_cats.week_start.max()\n",
+    "no_cats.corr()['sales']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
