Updating models.ipynb

--- a/notebooks/models/models.ipynb
+++ b/notebooks/models/models.ipynb
@@ -1059,7 +1059,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predictions that are wrong by > 10%, as a percent of the total test data set:  0.02%\n",
+      "Predictions that are wrong by > 10%, as a percent of the total test data set:  2%\n",
       "Total count of predictions that are wrong by > 10%:  642\n",
       "Total number of predictions:  40282\n"
      ]
@@ -1070,7 +1070,7 @@
     "wrongs = test_sub[np.abs((test_sub.Predicted - test_sub.Actual) / test_sub.Actual) > 0.1]\n",
     "\n",
     "print('Predictions that are wrong by > 10%, as a percent of the total test data set: ',\n",
-    "      '{:.2f}%'.format(len(wrongs)/len(test_sub)))\n",
+    "      '{:.0%}'.format(len(wrongs)/len(test_sub)))\n",
     "print('Total count of predictions that are wrong by > 10%: ', len(wrongs))\n",
     "print('Total number of predictions: ', len(test_sub))"
    ]
@@ -1316,7 +1316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
